feat: admin dashboard backend support, security hardening, and idempotent seeding